--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>DarkStore</title>
-	<link rel="shortcut icon" href="mgn.ico" type="image/x-icon">
+	<link rel="icon" type="image/png" sizes="32x32" href="https://magnum.kz/site/img/favicon/favicon-32x32.png">
 	<style type="text/css">
 		form{
 			display: inline-grid;
