--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<center>
 		<form>
 			<h3 style="font-family: 'Arial'">@specialist-po-tovarodvigenii</h3>
-			<h5>REPORT</h5>
+			<h5 style="font-family: 'Arial'; font-width: 600">REPORT</h5>
 			<table class="line">
 					<tr>
 						<th align="right">
